--- a/app/src/main/res/layout/photo_capture.xml
+++ b/app/src/main/res/layout/photo_capture.xml
@@ -1,52 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/topLayout"
+    android:id="@+id/top0Layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
     android:orientation="vertical">
-
-    <org.joanna.thesis.passportphotocreator.camera.CameraSourcePreview
-        android:id="@+id/preview"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/camera_place"
+        android:name="org.joanna.thesis.passportphotocreator.CameraFragment"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="5">
-
-        <org.joanna.thesis.passportphotocreator.camera.GraphicOverlay
-            android:id="@+id/graphicOverlay"
-            android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="5" />
-
-    </org.joanna.thesis.passportphotocreator.camera.CameraSourcePreview>
-
-    <LinearLayout
-        android:id="@+id/innerLayout"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:keepScreenOn="true"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/take_photo_button"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_gravity="center_vertical"
-            android:background="@drawable/buttonshape"
-            android:shadowColor="#A8A8A8"
-            android:text="@string/take_photo_button"
-            android:textSize="30sp" />
-
-        <ImageView
-            android:id="@+id/image_holder"
-            android:layout_width="91dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="250dp"
-            android:src="@drawable/picture" />
-    </LinearLayout>
-
+        android:layout_height="wrap_content" />
 </LinearLayout>
