--- a/app/src/main/res/layout/fragment_photo_preview.xml
+++ b/app/src/main/res/layout/fragment_photo_preview.xml
@@ -16,13 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/header"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="@string/image_preview"
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:id="@+id/imaLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,15 +30,17 @@
 
         <ImageView
             android:id="@+id/view_photo"
+            android:contentDescription="@string/taken_image"
             android:layout_width="match_parent"
             android:paddingLeft="40dp"
+            android:paddingRight="40dp"
             android:paddingTop="40dp"
             android:layout_height="450dp"
             />
     </RelativeLayout>
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:id="@+id/topLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -59,22 +61,7 @@
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="save"
-            android:textSize="15sp" />
-
-        <Button
-            android:id="@+id/cancel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:background="@drawable/buttonshape"
-            android:padding="5dp"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"
-            android:text="cancel"
+            android:text="@string/b_save"
             android:textSize="15sp" />
 
         <Button
@@ -89,7 +76,22 @@
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="save multiple"
+            android:text="@string/b_save_multiple"
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@drawable/buttonshape"
+            android:padding="5dp"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            android:text="@string/b_cancel"
             android:textSize="15sp" />
     </LinearLayout>
 
