Make picture taking button smaller

--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -26,10 +26,8 @@
     <Button
         android:id="@+id/take_photo_button"
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="wrap_content"
         android:text="@string/take_photo_button"
-        android:layout_margin="10dp"
-        android:layout_weight="1"
         android:padding="25dp"
         android:textSize="30sp"
         android:background="@drawable/buttonshape"
@@ -37,6 +35,7 @@
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="5"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="10dp"
+        android:layout_gravity="bottom|center_horizontal" />
 
 </LinearLayout>
